# SimpleFormBuilder

./: .gitignore  404.html  LICENCE.md  README.md  builder.py  debug_sympy.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  reproduce_issue.py  reproduce_issue_eng.py  reproduce_numpy_check.py  specifications.md  test_lambda.py  test_simple_form.py  test_simple_form_array.py  test_sympy_sub.py
docs/: index.md  reference.md
examples/: chained_evaluation.py  electricite.py  hydraulique.py  resistance_des_materiaux.py  test_lambda_pandas.py
reference/: index.html
search/: search_index.json
simpleformbuilder/: __init__.py  builder.py  templates.py  utils.py
tests/: test_builder.py  test_chained_lambda.py  test_lambdify.py  test_numpy.py  test_report_refactor.py  test_validation.py
