[project]
name = "simpleformbuilder"
version = "0.1.0"
authors = [
  { name="Guillaume GUGUIN", email="guillaume.guguin@gmail.com" },
]
description = "Simple library to build analytical calculation verification forms."
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pint>=0.25.2",
    "pint-pandas>=0.7.1",
    "pytest>=9.0.1",
    "sympy>=1.14.0",
]
